option/src/app/ords/app.j2.yaml
kind: Service
apiVersion: v1
metadata:
  name: ##PREFIX##-app-service
spec:
  type: ExternalName
  externalName: ##ORDS_HOST##
  ports:
    - port: 443
